manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-wbsite
  labels:
    app: medical-wbsite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medical-wbsite
  template:
    metadata:
      labels:
        app: medical-wbsite
    spec:
      containers:
      - name: medical-wbsite
        image: medicalwebsite.azurecr.io/medicalwebsite:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1000Mi"
            cpu: "500m"
          limits:
            memory: "2000Mi"
            cpu: "1000m"
