manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-wbsite-service
spec:
  selector:
    app: medical-wbsite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
