manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medical-wbsite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.vijayasaimediclas.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medical-wbsite-service
            port:
              number: 80
